// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HTTP Errors 1`] = `
Object {
  "err": Object {
    "message": "failed with status code 500",
    "stack": "Error: failed with status code 500
    at ServerResponse.onResFinished (/srv/test/node_modules/pino-http/logger.js:73:38)
    at ServerResponse.emit (node:events:406:35)
    at onFinish (node:_http_outgoing:828:10)
    at callback (node:internal/streams/writable:552:21)
    at afterWrite (node:internal/streams/writable:497:5)
    at afterWriteTick (node:internal/streams/writable:484:10)
    at processTicksAndRejections (node:internal/process/task_queues:82:21)",
    "type": "Error",
  },
  "hostname": "testhost",
  "level": 50,
  "msg": "500 Internal Server Error",
  "pid": 1337,
  "req": Object {
    "headers": Object {
      "connection": "close",
      "host": "127.0.0.1:8888",
    },
    "id": Object {},
    "method": "GET",
    "remoteAddress": "::ffff:127.0.0.1",
    "remotePort": 18888,
    "url": "/broken-page",
  },
  "res": Object {
    "headers": Object {},
    "statusCode": 500,
  },
  "responseTime": 0,
  "time": 1234567890000,
  "url": "/broken-page",
}
`;

exports[`HTTP OKs 1`] = `
Object {
  "hostname": "testhost",
  "level": 10,
  "msg": "200 OK",
  "pid": 1337,
  "req": Object {
    "headers": Object {
      "connection": "close",
      "host": "127.0.0.1:8890",
    },
    "id": Object {},
    "method": "GET",
    "remoteAddress": "::ffff:127.0.0.1",
    "remotePort": 18888,
    "url": "/existing-page",
  },
  "res": Object {
    "headers": Object {},
    "statusCode": 200,
  },
  "responseTime": 0,
  "time": 1234567890000,
  "url": "/existing-page",
}
`;

exports[`HTTP Warns 1`] = `
Object {
  "hostname": "testhost",
  "level": 40,
  "msg": "404 Not Found",
  "pid": 1337,
  "req": Object {
    "headers": Object {
      "connection": "close",
      "host": "127.0.0.1:8889",
    },
    "id": Object {},
    "method": "GET",
    "remoteAddress": "::ffff:127.0.0.1",
    "remotePort": 18888,
    "url": "/missing-page",
  },
  "res": Object {
    "headers": Object {},
    "statusCode": 404,
  },
  "responseTime": 0,
  "time": 1234567890000,
  "url": "/missing-page",
}
`;
